--- a/PAGES/7b1_performanceBasics/index.html
+++ b/PAGES/7b1_performanceBasics/index.html
@@ -2006,8 +2006,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The previous section described the process when a function is executed in Julia. It specifically stated that a function call triggers type inference, where Julia attempts to identify the type of each variable involved. This procedure explains why enclosing code within a function allows Julia to potentially specialize the method, unlike operations that rely on global variables. However, in addition to identifying each variable&#39;s type, specialization of the method requires identifying  <em> concrete types</em>. Consequently, users must not only wrap code in a function, but also verify that this property holds. </p>
-<p>In this section, we explore techniques for checking if a function meets the criterion of type stability. The discussion starts by providing a more formal definition of type stability. </p>
+<p>The previous section described Julia&#39;s process when a function is executed. It specifically stated that a function call triggers type inference, where Julia attempts to identify the type of each variable involved. This procedure explains why enclosing code within a function allows Julia to potentially specialize the method, unlike operations that rely on global variables. However, identifying each variable&#39;s type is only a necessary condition for specialization, additionally requiring the identification of  <em> concrete types</em>. Consequently, users must not only wrap code in a function, but also verify that this property holds. </p>
+<p>In this section, we explore techniques for checking if a function meets this criterion for type stability. The discussion starts by providing a more formal definition of type stability. </p>
 <p>      </div>
     </div>
   </div>
@@ -2230,7 +2230,7 @@ x .&#61; 1                      # 1 is converted to 1.0 due to x&#39;s type
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7b2_fixes_stability" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 7, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 9, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
