--- a/PAGES/8b3_reductions/index.html
+++ b/PAGES/8b3_reductions/index.html
@@ -2006,9 +2006,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Reductions are a powerful technique for <strong>operations that take collections as inputs and return a single value</strong>. A simple example of such operations is <code>sum&#40;x&#41;</code>, which computes the sum of all elements in a vector.</p>
-<p>The method is particularly useful when transforming a vector&#39;s elements prior to computing a summary statistic &#40;e.g., sum, maximum, mean, variance&#41;. An example is <code>sum&#40;2 .* x&#41;</code>, where the temporary vector <code>2 .* x</code> must be computed before the sum. Reductions make it possible to decrease memory allocations, by circumventing the materialization of <code>2 .* x</code>. </p>
-<p>The technique relies on iteratively applying the operation to a pair of elements, eventually combining the result into a single output. For instance, the sum of all elements in a vector is approached by adding the first two elements, then adding the third element to the resulting output, and continuing in this fashion until all the vector&#39;s elements have been summed. In case the computation is based on a temporary transformed vector, the approach doesn&#39;t allocate memory as it avoids the materialization of such a vector.</p>
+<p>Reductions are a powerful technique for efficiently handling <strong>operations that take collections as inputs and return a single value</strong>. A prime example of such an operation is <code>sum&#40;x&#41;</code>, which calculates the sum of all elements in a vector.</p>
+<p>The method is especially useful when transforming a vector&#39;s elements, prior to computing summary statistics &#40;e.g., sum, maximum, mean, variance&#41;. For instance, consider <code>sum&#40;2 .* x&#41;</code>, where the temporary vector <code>2 .* x</code> must be computed before the sum. In this case, reductions make it possible to decrease memory allocations by circumventing the materialization of <code>2 .* x</code>. </p>
+<p>Reductions work by iteratively applying the operation to pairs of elements, progressively combining the results to produce a single output. For example, when computing the sum of all elements in a vector, a reduction adds the first two elements, then adds the third element to the resulting output, and continues this process until all elements have been summed. In the particular case that the vector to be summed must be firstly transformed, this computation method saves memory allocation. The reason is that reductions rely on manipulating scalars, and so eliminate the need for the creation and storage of any temporary transformed vector. </p>
 <p>      </div>
     </div>
   </div>
@@ -2018,7 +2018,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Defining Reductions</h2></p>
-<p>Formally, a <span style="color: rgb(62, 121, 180);"><strong>reduction</strong></span> refers to the process of using a <a href="/julia_book/PAGES/3a_variables/#operators">binary operation</a> &#40;like addition&#41; to reduce a collection &#40;like a vector&#41; to a single value. A common example is summing all the elements of a vector. Its implementation involves updating the accumulated sum in each iteration through the binary operator <code>&#43;</code>.</p>
+<p>Formally, a <span style="color: rgb(62, 121, 180);"><strong>reduction</strong></span> refers to the process of using a <a href="/julia_book/PAGES/3a_variables/#operators">binary operation</a> to reduce a collection to a single value. A typical example is calculating the sum of all elements in a vector. Its implementation entails updating the accumulated sum in each iteration, through the binary operator <code>&#43;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2343,7 +2343,7 @@ foo&#40;x,y&#41; &#61; minimum&#40;a -&gt; a&#91;1&#93; * a&#91;2&#93;, zip&#40;
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8c_staticVectors" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 10, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 11, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
