--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -2225,21 +2225,29 @@ end</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
 <p>The practicality of this function is illustrated in the following, by applying it to various subsets of data.</p>
- <div class=" code_box"> <details  open><summary> Various Applications  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">#for virals
-viral_threshold  &#61; 100
+ <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
+ <div class="tab_wrapper">
+ <div class="tab_code_links">
+    <button class="tablink first_tab active" data-id=""> Viral Videos </button>
+    <button class="tablink" data-id=""> Non-Viral Videos </button>
+    <button class="tablink" data-id=""> Specific Days </button>
+</div><div data-id="" class="tabcontent active">
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">viral_threshold  &#61; 100
 is_viral         &#61; &#40;views_per_video .≥ viral_threshold&#41;
-viral            &#61; stats_subset&#40;views_per_video, pay_per_views, is_viral&#41;
-
-#for non-virals
+viral            &#61; stats_subset&#40;views_per_video, pay_per_views, is_viral&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 6, views = 1243.63, pay = 6133.19)</code></pre> </div></div> </div> 
+ </div><div data-id="" class="tabcontent">
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">viral_threshold  &#61; 100
 is_notviral      &#61; .&#33;&#40;is_viral&#41;      # &#39;&#33;&#39; is negating a boolean value, which we then broadcast
-notviral         &#61; stats_subset&#40;views_per_video, pay_per_views, is_notviral&#41;
-
-# videos created in specific days
-days_to_consider &#61; &#40;1, 10, 25&#41;
+notviral         &#61; stats_subset&#40;views_per_video, pay_per_views, is_notviral&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>notviral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 24, views = 1169.13, pay = 4971.02)</code></pre> </div></div> </div> 
+ </div><div data-id="" class="tabcontent">
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">days_to_consider &#61; &#40;1, 10, 25&#41;
 is_day           &#61; in.&#40;eachindex&#40;views_per_video&#41;, Ref&#40;days_to_consider&#41;&#41;
-specific_days    &#61; stats_subset&#40;views_per_video, pay_per_views, is_day&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 6, views = 1243.63, pay = 6133.19)</code></pre> </div></p>
-<div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>notviral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 24, views = 1169.13, pay = 4971.02)</code></pre> </div>
-<p><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>specific_days</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 3, views = 118.547, pay = 414.113)</code></pre> </div></div> </div>   </details></div>
+specific_days    &#61; stats_subset&#40;views_per_video, pay_per_views, is_day&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>specific_days</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 3, views = 118.547, pay = 414.113)</code></pre> </div></div> </div> 
+ </div></div>
+<p>  </p></details></div>
 <p>      </div>
     </div>
   </div>
