--- a/PAGES/6c_inplace/index.html
+++ b/PAGES/6c_inplace/index.html
@@ -2247,8 +2247,8 @@ map&#33;&#40;a -&gt; a^2, output, x&#41;</code></pre>
     <!-- <p class="m-0"> -->
     <div class="container">
        <span class="left-text"><a href="/julia_book/PAGES\6b_mutating_views" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
-        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
-       <span class="right-text"><a href="/julia_book/PAGES\6c1_tuples_and_namedtuples" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
+        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
+       <span class="right-text"><a href="/julia_book/PAGES\6c1_tuples_and_namedtuples" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Last Modified April 11, 2024 </span>  
   </div>
