--- a/PAGES/2a_basics/index.html
+++ b/PAGES/2a_basics/index.html
@@ -2163,8 +2163,8 @@ joinpath&#40;&quot;C:/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></p
     <!-- <p class="m-0"> -->
     <div class="container">
        <span class="left-text"><a href="/julia_book/PAGES\1a_installation" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
-        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
-       <span class="right-text"><a href="/julia_book/PAGES\1c_vscode" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
+        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
+       <span class="right-text"><a href="/julia_book/PAGES\1c_vscode" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Last Modified April 11, 2024 </span>  
   </div>
