--- a/PAGES/3b2_strings/index.html
+++ b/PAGES/3b2_strings/index.html
@@ -2137,8 +2137,8 @@ x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match
     <!-- <p class="m-0"> -->
     <div class="container">
        <span class="left-text"><a href="/julia_book/PAGES\3b_univariables" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
-        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
-       <span class="right-text"><a href="/julia_book/PAGES\3c_arrays" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
+        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
+       <span class="right-text"><a href="/julia_book/PAGES\3c_arrays" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Last Modified April 11, 2024 </span>  
   </div>
