--- a/PAGES/7b01_preliminaries_stability/index.html
+++ b/PAGES/7b01_preliminaries_stability/index.html
@@ -2183,8 +2183,8 @@ foo&#40;x, y&#41; &#61; x &#43; y</code></pre>
     <!-- <p class="m-0"> -->
     <div class="container">
        <span class="left-text"><a href="/julia_book/PAGES\overview_5" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
-        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
-       <span class="right-text"><a href="/julia_book/PAGES\7b1_performanceBasics" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
+        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
+       <span class="right-text"><a href="/julia_book/PAGES\7b1_performanceBasics" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Last Modified April 11, 2024 </span>  
   </div>
