--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -2242,7 +2242,7 @@ is_notviral      &#61; .&#33;&#40;is_viral&#41;      # &#39;&#33;&#39; is negati
 notviral         &#61; stats_subset&#40;views_per_video, pay_per_views, is_notviral&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>notviral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 24, views = 1169.13, pay = 4971.02)</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">days_to_consider &#61; &#40;1, 10, 25&#41;      # days where the videos were posted
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">days_to_consider &#61; &#40;1, 10, 25&#41;      # days when the videos were posted
 is_day           &#61; in.&#40;eachindex&#40;views_per_video&#41;, Ref&#40;days_to_consider&#41;&#41;
 specific_days    &#61; stats_subset&#40;views_per_video, pay_per_views, is_day&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>specific_days</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 3, views = 118.547, pay = 414.113)</code></pre> </div></div> </div> 
